lib_LTLIBRARIES = libsinex.la

## Only use the following flags for debuging purposes
libsinex_la_CXXFLAGS = \
	-std=c++17 \
	-g \
	-pg \
	-Wall \
	-Wextra \
	-Werror \
	-pedantic \
	-W \
	-Wshadow \
	-Winline \
	-Wdisabled-optimization \
	-DDEBUG

dist_include_HEADERS = \
        sinex.hpp

dist_libsinex_la_SOURCES = \
        sinex.cpp
